--- a/plugin.yml
+++ b/plugin.yml
@@ -1,7 +1,7 @@
 name: AdvancedKits
 main: AdvancedKits\Main
-version: 5.1.0-10
-api: [3.0.0-ALPHA10]
+version: 5.1.0-11
+api: [3.0.0-ALPHA10, 3.0.0-ALPHA11]
 author: luca28pet
 softdepend: ["PiggyCustomEnchants"]
 description: Add kits to your server
