--- a/plugin.yml
+++ b/plugin.yml
@@ -1,6 +1,6 @@
 name: AdvancedKits
 main: AdvancedKits\Main
-version: 5.1.0-12
+version: 5.1.1
 api: [3.0.0-ALPHA11]
 author: luca28pet
 softdepend: ["PiggyCustomEnchants"]
